// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should 測試收到 加一action 後 reducer 的變化 1`] = `
Immutable.Map {
  "count": 0,
}
`;

exports[`should 測試收到 加一action 後 reducer 的變化 2`] = `
Immutable.Map {
  "count": 1,
}
`;

exports[`should 測試收到 減一action 後 reducer 的變化 1`] = `
Immutable.Map {
  "count": 0,
}
`;

exports[`should 測試收到 減一action 後 reducer 的變化 2`] = `
Immutable.Map {
  "count": -1,
}
`;
